layer0/apps/perceptiq-preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perceptiq
  namespace: PREVIEW_NAMESPACE
spec:
  selector:
    app: perceptiq
  ports:
    - port: 80
      targetPort: 3000
